--- a/resources/style.css
+++ b/resources/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:         Hop Sage Starter Theme
+Theme Name:         Hop Sage Starter Theme.
 Theme URI:          https://roots.io/sage/
 Description:        Hop Sage WordPress Starter Theme
 Version:            1.0.0
