--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -1,6 +1,85 @@
-/** Colors */
-$primary:               #525ddc;
-$link:                  $primary;
+/** Colors **/
+$primary:             hsl(184, 91%, 17%);
+$link:                $primary;
+$gray-dark:           hsl(209, 61%, 16%);
+$white:               #fff;
+$black:               #000;
 
-/** Box Model  */
-$spacer:                2rem;
+/* dark shades of primary color */
+$primary-1: $primary;
+$primary-2: hsl(185, 84%, 25%);
+$primary-3: hsl(185, 81%, 29%);
+$primary-4: hsl(184, 77%, 34%);
+
+/* primary/main color */
+$primary-5: hsl(185, 62%, 45%);
+
+/* lighter shades of primary color */
+$primary-6: hsl(185, 57%, 50%);
+$primary-7: hsl(184, 65%, 59%);
+$primary-8: hsl(184, 80%, 74%);
+$primary-9: hsl(185, 94%, 87%);
+$primary-10: hsl(186, 100%, 94%);
+
+/* darkest grey - used for headings */
+$grey-1: $gray-dark;
+$grey-2: hsl(211, 39%, 23%);
+$grey-3: hsl(209, 34%, 30%);
+$grey-4: hsl(209, 28%, 39%);
+
+/* grey used for paragraphs */
+$grey-5: hsl(210, 22%, 49%);
+$grey-6: hsl(209, 23%, 60%);
+$grey-7: hsl(211, 27%, 70%);
+$grey-8: hsl(210, 31%, 80%);
+$grey-9: hsl(212, 33%, 89%);
+$grey-10: hsl(210, 36%, 96%);
+
+/* fonts */
+$ff-primary: "Lato", sans-serif;
+$transition: all 0.3s linear;
+$spacing: 0.25rem;
+$radius: 0.5rem;
+$light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+$dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+
+/** Box Model */
+$spacer: 2rem;
+
+// Fonts
+$font-size-base: 1rem;
+$font-size-1: $font-size-base * 3.25; // ~52px
+$font-size-2: $font-size-base * 2.75; // ~44px
+$font-size-3: $font-size-base * 1.75; // ~28px
+$font-size-4: $font-size-base * 1.375; // ~22px
+$font-size-5: $font-size-base * 1.125; // ~18px
+$font-size-6: $font-size-base * 0.9375; // ~15px
+$font-size-7: $font-size-base * 0.75; // ~12px
+
+$font-weight-light: 300;
+$font-weight-regular: 400;
+$font-weight-medium: 500;
+$font-weight-semibold: 600;
+$font-weight-bold: 700;
+
+$line-height-base: 28px;
+$line-height-sm: 24px;
+$line-height-lg: 34px;
+
+// Grid
+$grid-base: 10px;
+
+// Radius
+$border-radius: $grid-base * 0.2;
+$box-shadow-dark: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+$box-shadow-light: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+
+// Radius
+$border-radius: $grid-base * 0.2;
+
+// Breakpoints
+$bp-small: "536px";
+$bp-medium: "992px";
+$bp-large: "1280px";
+
+$spacer: 20;
