--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -12,6 +12,7 @@
 // @import "~some-node-module";
 
 /** Import theme styles */
+@import "common/variables";
 @import "common/global";
 @import "components/buttons";
 @import "components/comments";
