--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -1,5 +1,3 @@
-@import "common/variables";
-
 /** Import everything from autoload */
 @import "./autoload/**/*";
 
@@ -13,11 +11,16 @@
 
 /** Import theme styles */
 @import "common/variables";
+@import "common/mixins";
 @import "common/global";
+
+/** Components */
 @import "components/buttons";
 @import "components/comments";
 @import "components/forms";
 @import "components/wp-classes";
+
+/** Layouts */
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
