--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -12,6 +12,7 @@
 /** Import theme styles */
 @import "common/variables";
 @import "common/mixins";
+@import "common/utilis";
 @import "common/global";
 
 /** Components */
