--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -13,6 +13,7 @@
 @import "common/variables";
 @import "common/mixins";
 @import "common/utilis";
+@import "common/typography";
 @import "common/global";
 
 /** Components */
