--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -14,6 +14,7 @@
 @import "common/mixins";
 @import "common/utilis";
 @import "common/typography";
+@import "common/reset";
 @import "common/global";
 
 /** Components */
