--- a/resources/assets/styles/gutenberg.scss
+++ b/resources/assets/styles/gutenberg.scss
@@ -1,5 +1,3 @@
-@import "common/variables";
-
 /** Import everything from autoload */
 @import "./autoload/**/*";
 
@@ -12,11 +10,20 @@
 // @import "~some-node-module";
 
 /** Import theme styles */
+@import "common/variables";
+@import "common/mixins";
+@import "common/utilis";
+@import "common/typography";
+@import "common/reset";
 @import "common/global";
+
+/** Components */
 @import "components/buttons";
 @import "components/comments";
 @import "components/forms";
 @import "components/wp-classes";
+
+/** Layouts */
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
