--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -75,8 +75,10 @@ $box-shadow-dark: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22
 $box-shadow-light: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 
 // Breakpoints
-$bp-small: "536px";
-$bp-medium: "992px";
-$bp-large: "1280px";
+$bp-small: "640px";
+$bp-medium: "998px";
+$bp-large: "1024px";
+$bp-xl: "1280px";
+$bp-2xl: "1536px";
 
 $spacer: 20;
