--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -34,4 +34,9 @@
 /** Blocks */
 @import "blocks/block-1-nav";
 @import "blocks/block-banner-1";
+@import "blocks/block-gallery-1";
+@import "blocks/block-video-1";
 @import "blocks/block-2";
+@import "blocks/block-3";
+@import "blocks/block-4";
+@import "blocks/block-5";
