--- a/resources/assets/styles/blocks/block-2.scss
+++ b/resources/assets/styles/blocks/block-2.scss
@@ -1,4 +1,6 @@
 .block-2 {
+  background-color: $grey-10;
+
   .grid__outer {
     grid-template-columns: 1fr;
 
@@ -11,11 +13,12 @@
     align-self: flex-start;
 
     &-paragraph {
-      font-size: $font-size-4;
+      color: $grey-5;
+      font-size: $font-size-5;
+      line-height: $line-height-base;
       margin: 5px 16px 5px 0;
 
       @include medium-up {
-        font-size: $font-size-5;
         margin: 5px 0 4px;
         width: 90%;
       }
@@ -33,11 +36,7 @@
 
       span {
         height: 100%;
-        margin-right: 1rem;
-
-        @include medium-up {
-          margin-right: 2rem;
-        }
+        margin-right: 2rem;
       }
 
       h2 {
