--- a/resources/assets/styles/blocks/block-video-1.scss
+++ b/resources/assets/styles/blocks/block-video-1.scss
@@ -5,14 +5,14 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    // background-color: rgba(0, 0, 0, 0.4);
-    background-image:
-      linear-gradient(
-        90deg,
-        rgba(255, 0, 0, 0.466),
-        rgba(0, 0, 0, 0.555),
-        rgba(0, 0, 255, 0.466)
-      );
+    background-color: rgba(0, 0, 0, 0.4);
+    // background-image:
+    //   linear-gradient(
+    //     90deg,
+    //     rgba(255, 0, 0, 0.466),
+    //     rgba(0, 0, 0, 0.555),
+    //     rgba(0, 0, 255, 0.466)
+    //   );
     color: $white;
     position: relative;
     overflow: hidden;
