--- a/resources/assets/styles/common/_typography.scss
+++ b/resources/assets/styles/common/_typography.scss
@@ -1,14 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,600&display=swap");
 
 .heading {
-  font-weight: bold;
+  font-weight: $font-weight-semibold;
   margin: 15px 0;
   text-transform: capitalize;
-  color: $grey-2;
+  font-family: $ff-secondary;
+  font-style: italic;
+  color: $primary-1;
 
   &--1 {
-    font-size: 27px;
-    line-height: 33px;
+    font-size: $font-size-2;
+    line-height: $line-height-lg;
 
     @include large-up {
       font-size: $font-size-1;
@@ -17,8 +21,8 @@
   }
 
   &--2 {
-    font-size: $font-size-5;
-    line-height: 27px;
+    font-size: $font-size-3;
+    line-height: $line-height-base;
 
     @include large-up {
       font-size: $font-size-2;
