--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -1,42 +1,34 @@
 /** Colors **/
-$primary:             hsl(184, 91%, 17%);
+$primary:             hsl(185, 62%, 45%);
 $link:                $primary;
 $gray-dark:           hsl(209, 61%, 16%);
 $white:               #fff;
-$black:               #000;
+$black:             #000;
 
 /* dark shades of primary color */
-$primary-1: $primary;
+$primary-1: hsl(184, 91%, 17%);
 $primary-2: hsl(185, 84%, 25%);
-$primary-3: hsl(185, 81%, 29%);
-$primary-4: hsl(184, 77%, 34%);
 
 /* primary/main color */
-$primary-5: hsl(185, 62%, 45%);
+$primary-5: $primary;
 
 /* lighter shades of primary color */
-$primary-6: hsl(185, 57%, 50%);
-$primary-7: hsl(184, 65%, 59%);
 $primary-8: hsl(184, 80%, 74%);
 $primary-9: hsl(185, 94%, 87%);
 $primary-10: hsl(186, 100%, 94%);
 
 /* darkest grey - used for headings */
 $grey-1: $gray-dark;
-$grey-2: hsl(211, 39%, 23%);
-$grey-3: hsl(209, 34%, 30%);
-$grey-4: hsl(209, 28%, 39%);
+$grey-2: hsl(211, 39%, 40%);
 
 /* grey used for paragraphs */
 $grey-5: hsl(210, 22%, 49%);
-$grey-6: hsl(209, 23%, 60%);
-$grey-7: hsl(211, 27%, 70%);
-$grey-8: hsl(210, 31%, 80%);
 $grey-9: hsl(212, 33%, 89%);
 $grey-10: hsl(210, 36%, 96%);
 
 /* fonts */
-$ff-primary: "Lato", sans-serif;
+$ff-primary: "Rajdhani", sans-serif;
+$ff-secondary: "EB Garamond", serif;
 $transition: all 0.3s linear;
 $spacing: 0.25rem;
 $radius: 0.5rem;
@@ -82,3 +74,14 @@ $bp-xl: "1280px";
 $bp-2xl: "1536px";
 
 $spacer: 20;
+
+/** Heading */
+$nav-bg-light: rgba(255, 255, 255, 0.9);
+$nav-bg-dark: rgba(0, 0, 0, 0.1);
+$nav-font-dark: $grey-2 !important;
+$nav-font-light: $grey-9 !important;
+$nav-border: #c0c0c0;
+
+//Hamburger
+$hamburger-light: $grey-9;
+$hamburger-dark: $grey-2;
