--- a/resources/assets/styles/gutenberg.scss
+++ b/resources/assets/styles/gutenberg.scss
@@ -37,6 +37,7 @@
 @import "blocks/block-banner-1";
 @import "blocks/block-gallery-1";
 @import "blocks/block-video-1";
+@import "blocks/block-slider-1";
 @import "blocks/block-2";
 @import "blocks/block-3";
 @import "blocks/block-4";
