--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -10,6 +10,10 @@
 // @import "~some-node-module";
 @import "~hamburgers/_sass/hamburgers/hamburgers";
 
+// Import Slick
+@import "~slick-carousel/slick/slick.scss";
+@import "~slick-carousel/slick/slick-theme.scss";
+
 /** Import theme styles */
 @import "common/variables";
 @import "common/mixins";
@@ -38,6 +42,7 @@
 @import "blocks/block-banner-1";
 @import "blocks/block-gallery-1";
 @import "blocks/block-video-1";
+@import "blocks/block-slider-1";
 @import "blocks/block-2";
 @import "blocks/block-3";
 @import "blocks/block-4";
