--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -11,6 +11,9 @@
 @import "~hamburgers/_sass/hamburgers/hamburgers";
 
 // Import Slick
+$slick-font-path: "~slick-carousel/slick/fonts/";
+$slick-loader-path: "~slick-carousel/slick/";
+
 @import "~slick-carousel/slick/slick.scss";
 @import "~slick-carousel/slick/slick-theme.scss";
 
