--- a/resources/assets/styles/gutenberg.scss
+++ b/resources/assets/styles/gutenberg.scss
@@ -27,6 +27,7 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "components/comments";
 @import "components/forms";
 @import "components/wp-classes";
+@import "components/social";
 
 /** Layouts */
 @import "layouts/header";
