Add contact fields

--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -85,3 +85,8 @@ $nav-border: #c0c0c0;
 //Hamburger
 $hamburger-light: $grey-9;
 $hamburger-dark: $grey-2;
+
+//Footer
+$footer-fonts-color: $black;
+$footer-fonts-size: $font-size-base * 0.75; // ~12px
+$footer-line-height: 15px;
