--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -76,4 +76,11 @@
       color: $nav-font-dark;
     }
   }
+
+  .navbar-item {
+    img {
+      max-width: 55px;
+      height: auto;
+    }
+  }
 }
