--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -1,3 +1,6 @@
+/** Import Bootstrap functions */
+@import "~bootstrap/scss/functions";
+
 /** Colors **/
 $primary:             hsl(185, 62%, 45%);
 $link:                $primary;
