latest blog page updates

--- a/resources/assets/styles/common/_utilis.scss
+++ b/resources/assets/styles/common/_utilis.scss
@@ -44,3 +44,21 @@
     }
   }
 }
+
+img.avatar {
+  width: auto;
+}
+
+.sidebar-cont {
+  border: 1px solid #aae0ea;
+  background: #aae0ea;
+  padding: 15px;
+}
+
+.blog-thumb-content {
+  padding: 1.25em;
+}
+
+.card-body {
+  padding: 0;
+}
