--- a/resources/assets/styles/blocks/block-banner-1.scss
+++ b/resources/assets/styles/blocks/block-banner-1.scss
@@ -17,12 +17,22 @@
     opacity: 0;
   }
 
+  &.blog-banner {
+    background-position: center;
+
+    .header-overlay {
+      opacity: initial !important;
+      background: rgba(0, 0, 0, 0.6);
+    }
+  }
+
   .flex {
     flex-direction: column;
     align-items: flex-start;
 
     h1 {
       color: $white;
+      z-index: 10;
 
       @include medium-up {
         width: 50%;
