--- a/resources/assets/styles/blocks/block-2.scss
+++ b/resources/assets/styles/blocks/block-2.scss
@@ -1,5 +1,5 @@
 .block-2 {
-  background-color: $grey-10;
+  background-color: $ghost-white;
 
   .grid__outer {
     grid-template-columns: 1fr;
@@ -13,9 +13,9 @@
     align-self: flex-start;
 
     &-paragraph {
-      color: $grey-5;
-      font-size: $font-size-5;
-      line-height: $line-height-base;
+      color: $body-text-color;
+      font-size: $font-size-18;
+      line-height: 28px;
       margin: 5px 16px 5px 0;
 
       @include medium-up {
@@ -45,7 +45,7 @@
 
       &-label {
         display: block;
-        font-weight: $font-weight-bold;
+        font-weight: 700;
       }
     }
   }
