--- a/resources/assets/styles/blocks/block-5.scss
+++ b/resources/assets/styles/blocks/block-5.scss
@@ -5,7 +5,7 @@
   position: relative;
   padding: 10rem 0 5rem 0;
   clip-path: polygon(0 0, 100% 15%, 100% 80%, 0% 100%);
-  color: $grey-10;
+  color: $body-text-color;
 
   &::after {
     content: "";
@@ -15,7 +15,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    background: $grey-1;
+    background: $gray-dark;
     opacity: 0.4;
     z-index: -1;
   }
@@ -31,7 +31,7 @@
   }
 
   .video-banner {
-    background: $grey-9;
+    background: $gray-light;
     opacity: 0.8;
     padding: 3rem 5rem 12rem 5rem;
     text-align: center;
@@ -44,7 +44,7 @@
 
   .video-text {
     max-width: 30rem;
-    color: $grey-2;
+    color: $body-text-color;
     margin-bottom: 1.5rem;
   }
 }
