--- a/resources/assets/styles/blocks/block-6.scss
+++ b/resources/assets/styles/blocks/block-6.scss
@@ -17,12 +17,12 @@
 
     &--filter {
       background: transparent;
-      color: $primary-5;
-      border: 1px solid $primary-5;
+      color: $primary;
+      border: 1px solid $primary;
 
       &:hover {
         color: $white;
-        border: 1px solid $primary-1;
+        border: 1px solid $gray-dark;
       }
     }
   }
@@ -87,25 +87,25 @@
     &--info header {
       display: flex;
       justify-content: space-between;
-      border-bottom: 3px dotted $grey-5;
+      border-bottom: 3px dotted $body-text-color;
     }
 
     &--info h3 {
       margin-bottom: 0.5rem;
       text-transform: capitalize;
-      font-weight: $font-weight-medium;
-      font-size: $font-size-5;
+      font-weight: 500;
+      font-size: $font-size-18;
     }
 
     &--price {
-      color: $primary-2;
-      font-size: $font-size-5;
+      color: $primary;
+      font-size: $font-size-18;
     }
 
     &--text {
       margin: 0;
       padding-top: 0.5rem;
-      color: $grey-5;
+      color: $body-text-color;
     }
   }
 }
