--- a/resources/assets/styles/components/_buttons.scss
+++ b/resources/assets/styles/components/_buttons.scss
@@ -1,21 +1,21 @@
 .btn {
   text-transform: uppercase;
-  background: $primary-1;
+  background: $gray-dark;
   color: $white;
   padding: 0.375rem 1.25rem;
-  letter-spacing: $spacing;
+  letter-spacing: $letter-spacing;
   display: inline-block;
   text-align: center;
 
   /* font-weight: 700; */
   transition: $transition;
-  font-size: $font-size-7;
+  font-size: $font-size-12;
   border: 2px solid transparent;
   cursor: pointer;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 }
 
 .btn:hover {
-  color: $primary-1;
-  background: $primary-8;
+  color: $gray-dark;
+  background: $ghost-white;
 }
