--- a/resources/assets/styles/common/_reset.scss
+++ b/resources/assets/styles/common/_reset.scss
@@ -22,10 +22,12 @@ body {
 p {
   font-size: $font-size-15;
   line-height: 24px;
+  margin: 15px 0;
 }
 
 img {
   width: 100%;
+  height: auto;
   display: block;
 
   &.size-icon {
