--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -40,6 +40,7 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "layouts/posts";
 @import "layouts/tinymce";
 @import "layouts/nav-drop";
+@import "layouts/blog";
 
 /** Blocks */
 @import "blocks/block-1-nav";
