--- a/resources/assets/styles/blocks/block-5.scss
+++ b/resources/assets/styles/blocks/block-5.scss
@@ -15,8 +15,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    background: $gray-dark;
-    opacity: 0.4;
+    background-color: $overlay-background-color;
     z-index: -1;
   }
 
