--- a/resources/assets/styles/blocks/block-video-1.scss
+++ b/resources/assets/styles/blocks/block-video-1.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: $overlay-background-color;
     // background-image:
     //   linear-gradient(
     //     90deg,
