--- a/resources/assets/styles/components/_buttons.scss
+++ b/resources/assets/styles/components/_buttons.scss
@@ -1,7 +1,7 @@
 .btn {
   text-transform: uppercase;
-  background: $gray-dark;
-  color: $white;
+  background: $button-bg-color;
+  color: $button-text-color;
   padding: 0.375rem 1.25rem;
   letter-spacing: $letter-spacing;
   display: inline-block;
@@ -11,11 +11,14 @@
   transition: $transition;
   font-size: $font-size-12;
   border: 2px solid transparent;
+  border-color: $button-border-color;
+  border-radius: $border-radius;
   cursor: pointer;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: $button-shadow-light;
 }
 
 .btn:hover {
-  color: $gray-dark;
-  background: $ghost-white;
+  color: $button-text-color-hover;
+  background: $button-bg-color-hover;
+  border-color: $button-border-color-hover;
 }
