--- a/resources/assets/styles/layouts/_footer.scss
+++ b/resources/assets/styles/layouts/_footer.scss
@@ -3,16 +3,27 @@
   background-color: $primary;
 
   &__inner {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    // display: flex;
+    // justify-content: space-between;
+    // flex-wrap: wrap;
     gap: 10px;
-    align-items: center;
-    min-height: 180px;
-    width: 100%;
+    // align-items: center;
+    text-align: center;
+    // min-height: 180px;
+    // width: 100%;
+    padding: 20px 0;
 
-    @include medium-up {
+    @include small-up {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      text-align: left;
+      // gap: 10px;
+      align-items: center;
+      min-height: 180px;
+      width: 100%;
       gap: 30px;
+      padding: 0 20px;
     }
   }
 
@@ -23,22 +34,45 @@
       line-height: 20px;
 
       a {
-        color: $black;
+        color: $link;
+
+        &:hover {
+          color: $link-hover;
+        }
       }
     }
   }
 
+  &__social {
+    margin: auto auto 20px;
+
+    @include small-up {
+      margin: auto;
+    }
+  }
+
   &__contact {
+    margin: auto auto 20px;
+
     ul li,
     h5 {
-      font-size: 10px;
-      color: $black;
+      font-size: $font-size-12;
+      color: $body-text-color;
       line-height: 15px;
     }
 
     h5 {
       font-weight: normal;
       text-transform: uppercase;
+      margin-bottom: 5px;
+
+      @include small-up {
+        margin: auto;
+      }
+    }
+
+    @include small-up {
+      margin: auto;
     }
   }
 
@@ -46,6 +80,21 @@
     img {
       max-width: 100px;
       height: auto;
+      margin: auto auto 20px;
+
+      @include small-up {
+        margin: auto;
+      }
+    }
+  }
+}
+
+footer {
+  .widget {
+    margin: auto auto 20px;
+
+    @include small-up {
+      margin: auto;
     }
   }
 }
