--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -39,8 +39,9 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
-@import "layouts/nav-drop";
 @import "layouts/blog";
+// @import "layouts/nav-drop";
+@import "layouts/nav-side-slide";
 
 /** Blocks */
 @import "blocks/block-1-nav";
