--- a/resources/assets/styles/layouts/_nav-side-slide.scss
+++ b/resources/assets/styles/layouts/_nav-side-slide.scss
@@ -1,142 +1,322 @@
-.nav {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-}
+#side-slide {
+  &.nav {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 100;
+    align-items: center;
 
-.nav-slide a {
-  color: $blue-dark;
-}
+    &.isOpen .cover {
+      background-color: rgba(0, 0, 0, 0.6);
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 100vh;
+      transition: background-color 0.3s 0.5s, transform 0.3s;
+      transform: translateX(400px);
+      z-index: 100;
+    }
 
-.header-btn-cont a:hover {
-  color: $white;
-  text-decoration: none;
-}
+    .nav-brand-logo {
+      img {
+        height: 75px !important;
+        width: auto;
+        margin: auto;
+      }
 
-/* Nav css */
-.main-menu {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  font-size: 0.9rem;
-}
+      &:hover {
+        border-left: none;
+      }
+    }
 
-.main-menu li > .sub-menu {
-  list-style-type: none;
-  max-height: 0;
-  display: block;
-  overflow: hidden;
-  transition: max-height 0.5s linear;
-}
+    .brand-logo {
+      // height: 100px;
+      padding: 10px 0;
+      transition: all 0.5s ease;
+      margin: auto;
 
-.menu-item-has-children > .sub-menu a {
-  padding: 0.25rem 1rem;
-}
+      .company-name {
+        text-align: center;
+        color: $white;
+        font-size: $font-size-22;
+        margin-top: 5px;
+        font-family: $ff-primary;
+      }
 
-.menu-item-has-children.open .sub-menu {
-  height: 100%;
-  max-height: 400px;
-  transition: max-height 1s linear;
-}
+      img {
+        height: 80px;
+        width: auto;
+        margin: auto;
+        transition: $transition;
+      }
+    }
 
-// .main-menu > li:last-child {
-//   margin-top: 10px;
-// }
+    &.addbg {
+      background-color: rgba(170, 224, 234, 0.9);
+      box-shadow: $box-shadow-light;
 
-// .main-menu li a {
-//   border-left: 4px solid #aae0ea;
-// }
+      .brand-logo img {
+        height: 60px;
+      }
 
-// .nav-slide a:hover {
-//   color: $link-hover;
-//   border-left: 4px solid $gray-light;
-//   text-decoration: none;
-// }
+      .company-name {
+        display: none;
+      }
+    }
+  }
 
-// .current-menu-item > a,
-// .current-menu-parent > a,
-// .current_page_item > a {
-//   border-left: 4px solid $gray-dark !important;
-// }
+  .current-menu-item > a,
+  .current-menu-parent > a,
+  .current_page_item > a {
+    border-left: 4px solid $gray-dark !important;
+  }
 
-a.mob-home-btn:hover {
-  border-left: none;
-}
+  // .nav-slide a {
+  //   color: $blue-dark;
+  // }
 
-.nav-slide .btn-filled a,
-.nav-slide .btn-filled a:hover {
-  border-left: 1px solid #005d7d;
-}
+  .header-btn-cont {
+    .book-btn {
+      border-radius: initial;
+    }
+  }
 
-// .nav-phone-cta a:hover {
-//   border: none;
-//   cursor: pointer;
-// }
+  .header-cta-section {
+    position: absolute;
+    right: 0;
+    padding: 0 20px;
+    display: flex;
 
-.nav-phone-cta a:hover .fa {
-  transition: all 0.3s ease-in-out;
-  background-color: #005d7d;
-  color: #fff;
-}
+    .header-phone {
+      display: none;
+      align-items: center;
+      padding-right: 20px;
 
-// .main-menu li a {
-//   display: block;
-//   padding: .5rem 1rem;
-//   font-weight: bold;
-// }
+      a {
+        color: $white;
+      }
 
-// .nav-cont {
-//   position: relative;
-//   padding: 20px 0 20px 20px;
-//   flex-grow: 1;
+      @include small-up {
+        display: flex;
+      }
+    }
 
-//   .fa a {
-//     font-weight: bold;
-//   }
-// }
+    .header-social {
+      display: none;
+      text-align: center;
+      // margin-right: -4px;
+      justify-content: center;
+      align-items: center;
 
-.nav-slide {
-  position: fixed;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  max-width: 400px;
-  left: -400px;
-  z-index: 10;
-  color: white;
-  transition: left 0.5s ease-in-out;
-  overflow: auto;
-  display: flex;
-  flex-flow: column;
-  background-color: #aae0ea;
-}
+      a {
+        background-color: #aae0ea;
+        padding: 8px;
+        width: 50px;
+      }
 
-.isOpen .nav-slide {
-  left: 0;
-}
+      @include small-up {
+        display: flex;
+      }
+    }
 
-.nav.isOpen .cover {
-  background-color: rgba(0, 0, 0, 0.6);
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100vh;
-  transition: background-color 0.3s 0.5s, transform 0.3s;
-  transform: translateX(400px);
-  z-index: 100;
-}
+    .book-btn-text {
+      display: none;
 
-/* menu has children icon */
-.main-menu li a:not(:only-child)::after {
-  float: right;
-  content: "\f078";
-  font-family: "FontAwesome";
+      @include small-up {
+        display: block;
+      }
+    }
+  }
+
+  .nav-cont {
+    position: relative;
+    padding: 20px 0 20px 20px;
+    flex-grow: 1;
+
+    .fa a {
+      font-weight: bold;
+    }
+  }
+
+  .nav-phone-cta {
+    padding: 20px;
+    border-top: 2px solid #005d7d;
+    border-bottom: 2px solid #005d7d;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    font-weight: bold;
+    margin-right: 20px;
+
+    a:hover {
+      border: none;
+      cursor: pointer;
+
+      .fa {
+        transition: all 0.3s ease-in-out;
+        background-color: #005d7d;
+        color: #fff;
+      }
+    }
+  }
+
+  .nav-slide {
+    position: fixed;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    max-width: 400px;
+    left: -400px;
+    z-index: 10;
+    color: white;
+    transition: left 0.5s ease-in-out;
+    overflow: auto;
+    display: flex;
+    flex-flow: column;
+    background-color: #aae0ea;
+
+    a:hover {
+      color: $link-hover;
+      border-left: 4px solid $gray-light;
+      text-decoration: none;
+    }
+
+    .book-btn a {
+      border-left: none !important;
+    }
+
+    .btn-filled a,
+    .btn-filled a:hover {
+      border-left: 1px solid #005d7d;
+    }
+  }
+
+  &.isOpen .nav-slide {
+    left: 0;
+  }
+
+  #menu-footer-nav li {
+    padding: 11px 0;
+  }
+
+  #menu-primary-navigation {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 0.9rem;
+
+    li a {
+      border-left: 4px solid #aae0ea;
+      display: block;
+      padding: 0.5rem 1rem;
+      font-weight: bold;
+    }
+
+    li.book-btn {
+      display: inline-block;
+    }
+
+    li > .sub-menu {
+      list-style-type: none;
+      max-height: 0;
+      display: block;
+      overflow: hidden;
+      transition: max-height 0.5s linear;
+      padding-left: 30px;
+    }
+
+    .open .sub-menu {
+      height: 100%;
+      max-height: 400px;
+      transition: max-height 1s linear;
+    }
+
+    .sub-menu a {
+      padding: 0.25rem 1rem;
+    }
+
+    > li:last-child {
+      margin-top: 10px;
+    }
+
+    .dropdown-toggle {
+      display: inline;
+      background-color: transparent;
+      border: 0;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      cursor: pointer;
+      content: "";
+      position: absolute;
+      right: 10px;
+      margin-left: 10px;
+      padding: 7px 5px 2px;
+    }
+  }
+
+  .logo-cont {
+    background-color: $primary;
+    padding: 10px 0;
+    text-align: center;
+  }
+
+  /* menu has children icon */
+  #menu-primary-navigation li a:not(:only-child)::after {
+    width: 14px;
+    height: 10px;
+    content: "";
+    background-image: url(../images/icons/arrow-down-banner.svg);
+    // display: inline-block;
+    float: right;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    margin-top: 10px;
+    margin-right: 12px;
+  }
+
+  .nav-menu-head {
+    color: #000;
+    padding-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: $font-size-18;
+    font-family: $ff-primary;
+  }
+
+  .nav-toggle {
+    position: absolute;
+    right: -40px;
+    top: 0;
+    width: 40px;
+    height: 40px;
+    background-color: red;
+    line-height: 40px;
+    text-decoration: none;
+    text-align: center;
+  }
+
+  button.hamburger {
+    position: absolute;
+    left: 10px;
+    z-index: 20;
+    transition: background-color 0.5s ease-in-out;
+  }
+
+  // .brand-logo img,
+  // .nav-brand-logo img {
+  //   height: 100%;
+  //   width: auto;
+  // }
 }
 
 /* Prevent body scroll */
@@ -144,101 +324,6 @@ a.mob-home-btn:hover {
   position: relative; /* for ios */
   overflow: hidden;
 }
-
-.logo-cont {
-  text-align: center;
-}
-
-.nav-menu-head {
-  color: #000;
-  padding-bottom: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 34px;
-  font-family: "Times New Roman", Times, serif;
-}
-
-.nav-toggle {
-  position: absolute;
-  right: -40px;
-  top: 0;
-  width: 40px;
-  height: 40px;
-  background-color: red;
-  line-height: 40px;
-  text-decoration: none;
-  text-align: center;
-}
-
-.nav-toggle::before {
-  content: "\2192";
-  font-weight: 600;
-  color: white;
-}
-
-button.hamburger {
-  position: absolute;
-  left: 10px;
-  z-index: 20;
-  transition: background-color 0.5s ease-in-out;
-}
-
-#menu-footer-nav li {
-  padding: 11px 0;
-}
-
-header.nav {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 100;
-  align-items: center;
-}
-
-.header-cta-section {
-  position: absolute;
-  right: 0;
-  padding: 0 20px;
-  display: flex;
-}
-
-.brand-logo {
-  height: 100px;
-  padding: 10px 0;
-  transition: all 0.5s ease;
-  margin: auto;
-}
-
-header.addbg .brand-logo {
-  height: 68px;
-  /* padding: 8px 0; */
-}
-
-.brand-logo img, .nav-brand-logo img {
-  height: 100%;
-  width: auto;
-}
-
-.header-phone {
-  display: flex;
-  align-items: center;
-  padding-right: 20px;
-}
-
-.header-social {
-  display: flex;
-  text-align: center;
-  margin-right: -4px;
-}
-
-.header-btn-cont {
-  margin-left: 4px;
-}
-
-
-
-
 
 /* @media (max-width: 768px) {
     .header-phone a {
