--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -31,7 +31,7 @@ $border-radius: 5px;
 // fonts
 $ff-primary: "Rajdhani", sans-serif;
 $ff-secondary: "EB Garamond", serif;
-$letter-spacing: 0.25rem;
+$letter-spacing: 0.2rem;
 $font-size-base: 1rem;
 $font-size-52: $font-size-base * 3.25; // ~52px
 $font-size-44: $font-size-base * 2.75; // ~44px
@@ -82,7 +82,11 @@ $hamburger-dark: $primary;
 // layout
 $blog-container-width: 900px;
 
+// Logo height
+$logo-height: 80px;
+
 // Footer
 $footer-fonts-color: $body-text-color;
 $footer-fonts-size: $font-size-base * 0.75; // ~12px
 $footer-line-height: 15px;
+$footer-font-size: $font-size-12;
