--- a/resources/assets/styles/layouts/_footer.scss
+++ b/resources/assets/styles/layouts/_footer.scss
@@ -3,14 +3,8 @@
   background-color: $primary;
 
   &__inner {
-    // display: flex;
-    // justify-content: space-between;
-    // flex-wrap: wrap;
     gap: 10px;
-    // align-items: center;
     text-align: center;
-    // min-height: 180px;
-    // width: 100%;
     padding: 20px 0;
 
     @include small-up {
@@ -18,7 +12,6 @@
       justify-content: space-between;
       flex-wrap: wrap;
       text-align: left;
-      // gap: 10px;
       align-items: center;
       min-height: 180px;
       width: 100%;
@@ -30,7 +23,7 @@
   &__menu,
   &__contact {
     ul li {
-      font-size: $font-size-12;
+      font-size: $footer-font-size;
       line-height: 20px;
 
       a {
@@ -56,7 +49,7 @@
 
     ul li,
     h5 {
-      font-size: $font-size-12;
+      font-size: $footer-font-size;
       color: $body-text-color;
       line-height: 15px;
     }
@@ -95,6 +88,16 @@ footer {
 
     @include small-up {
       margin: auto;
+    }
+  }
+
+  .social {
+    &__icon {
+      font-size: $footer-font-size;
+    }
+
+    &__text {
+      font-size: $footer-font-size;
     }
   }
 }
