--- a/resources/assets/styles/layouts/_nav-drop.scss
+++ b/resources/assets/styles/layouts/_nav-drop.scss
@@ -135,6 +135,14 @@
 
   .main-navigation ul li.book-btn a {
     color: $button-text-color !important;
+    border: 2px solid transparent;
+    text-transform: none;
+
+    &:hover {
+      border-color: $button-bg-color;
+      color: $button-text-color-hover !important;
+      background-color: $button-bg-color-hover;
+    }
   }
 
   .main-navigation ul ul {
@@ -309,7 +317,7 @@
       padding-bottom: 5px;
       padding-top: 5px;
       background-color: $nav-bg-light;
-      border: 1px solid #c0c0c0;
+      border: 1px solid $nav-bg-light;
       z-index: 999;
     }
 
