force push latest CSS side slide

--- a/resources/assets/styles/layouts/_nav-drop.scss
+++ b/resources/assets/styles/layouts/_nav-drop.scss
@@ -238,7 +238,7 @@
     font-weight: bold;
   }
 
-  /* Screen readers */
+  // Screen readers
   .screen-readers {
     position: absolute !important;
     width: 1px;
