new blocks added, room CPT and single room, 404 page styled

--- a/resources/assets/styles/common/_mixins.scss
+++ b/resources/assets/styles/common/_mixins.scss
@@ -22,6 +22,12 @@
   }
 }
 
+@mixin medium-down {
+  @media (max-width: #{$bp-medium}) {
+    @content;
+  }
+}
+
 @mixin large-up {
   @media (min-width: #{$bp-large}) {
     @content;
