--- a/resources/assets/styles/components/_forms.scss
+++ b/resources/assets/styles/components/_forms.scss
@@ -1,20 +1,43 @@
-// /** Search form */
-// .search-form {
-//   @extend .field, .has-addons;
-// }
+input {
+  height: 3em;
+  padding: 0 10px;
+}
 
-// .search-form label {
-//   @extend .control;
+input[type=search],
+input[type=email] {
+  width: 200px;
+  border: 1px solid $black;
+}
 
-//   font-weight: normal;
-// }
+input[type=submit] {
+  cursor: pointer;
+  padding: 0 2em;
+  background-color: $primary;
+  color: $white;
+  border: 1px solid $primary;
+  transition: $transition;
 
-// .search-form .search-field {
-//   @extend .input;
+  &:hover {
+    background-color: $white;
+    color: $black;
+  }
+}
 
-//   border-radius: 0 !important;
-// }
+.wpcf7-spinner {
+  display: none;
+}
 
-// .search-form .search-submit {
-//   @extend .button, .is-info;
-// }
+.search,
+.error404 {
+  form {
+    display: flex;
+    margin-top: 10px;
+  }
+}
+
+.error404 {
+  input[type=search] {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
