--- a/resources/assets/styles/gutenberg.scss
+++ b/resources/assets/styles/gutenberg.scss
@@ -49,3 +49,15 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "blocks/block-4";
 @import "blocks/block-5";
 @import "blocks/block-6";
+@import "blocks/block-banner-slider-1";
+@import "blocks/block-contact-details-1";
+@import "blocks/block-cta-1";
+@import "blocks/block-gallery-tabs-1";
+@import "blocks/block-image-wysiwyg";
+@import "blocks/block-map-split-1";
+@import "blocks/block-offers-1";
+@import "blocks/block-rooms-1";
+@import "blocks/block-slider-split-1";
+@import "blocks/block-slider-testimonials-1";
+@import "blocks/block-wysiwyg";
+@import "blocks/block-banner-basic";
